调整专题菜单样式，微调整header样式

--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -21,6 +21,8 @@
       height: 38px;
       width: calc(50% - 500px);
       text-align: end;
+      cursor: pointer;
+      padding-right: 10px;
       img {
         height: 100%;
         width: auto;
@@ -30,7 +32,7 @@
       width: 750px;
       .inputWrap {
         width: 75%;
-        margin-left: 10px;
+        margin-left: 12px;
         :global(.record-wrap) {
           width: calc(750px * 0.75 - 80px);
         }
