--- a/src/pages/query/index.less
+++ b/src/pages/query/index.less
@@ -33,6 +33,9 @@
   }
   .topicWrap{
     margin-top: 20px;
+    :global(.ant-card-head){
+      padding:0 14px;
+    }
     :global(.ant-card-body){
       padding: 10px 0px;
     }
