--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -20,7 +20,7 @@
       color: #fff;
       height: 38px;
       width: calc(50% - 500px);
-      text-align: end;
+      text-align: right;
       cursor: pointer;
       padding-right: 10px;
       img {
@@ -70,7 +70,7 @@
     .login {
       color: #fff;
       flex: 1;
-      text-align: end;
+      text-align: right;
       padding-right: 20px;
       .tips {
         .links {
