修复诸多问题，优化社区首页长问题显示，优化个人中心关注体验，优化错误提示等等

--- a/src/layouts/HomeLayout.less
+++ b/src/layouts/HomeLayout.less
@@ -34,13 +34,12 @@
         }
       }
 
-      .tips {
-        .links {
-          color: #fff;
-          margin-left: 4px;
-          &:hover {
-            text-decoration: underline;
-          }
+      .links {
+        color: #fff;
+        margin-left: 4px;
+        &:hover {
+          // text-decoration: underline;
+          color: orange;
         }
       }
     }
