--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -72,15 +72,15 @@
       flex: 1;
       text-align: right;
       padding-right: 20px;
-      .tips {
-        .links {
-          color: #fff;
-          margin-left: 4px;
-          &:hover {
-            text-decoration: underline;
-          }
+
+      .links {
+        color: #fff;
+        margin-left: 4px;
+        &:hover {
+          color: orange;
         }
       }
+
       .login_btn,
       .register_btn {
         height: 30px;
