--- a/src/pages/query/components/Concept/index.less
+++ b/src/pages/query/components/Concept/index.less
@@ -2,11 +2,13 @@
 
 .concept {
   .cardStyle();
+
   h2 {
     padding-bottom: 10px;
     color: lightslategray;
     font-size: 18px;
   }
+
   .card {
     .content {
       padding: 10px 0 20px;
@@ -15,40 +17,55 @@
       line-height: 24px;
       text-align: left;
     }
+
+    .types {
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
     .item {
       padding: 4px 8px;
       border: 1px solid lightblue;
       margin-right: 10px;
       border-radius: 4px;
+      margin-bottom: 5px;
+
       &:hover {
         background-color: #1890ff;
         color: #fff;
       }
     }
-    ol > li {
+
+    ol>li {
       padding: 10px 0;
       color: #333;
       letter-spacing: 2px;
       line-height: 24px;
       text-align: left;
-      
+
     }
+
     .source {
       font-size: 13px;
       display: flex;
       justify-content: flex-end;
-      a{
+
+      a {
         color: #999;
-        &:hover{
+
+        &:hover {
           color: #1890ff;
         }
       }
     }
   }
+
   .more {
     color: #c4c4c4;
     display: flex;
     justify-content: flex-end;
+
     &:hover {
       color: #1890ff;
     }
