医药知识库界面优化spin链接目录字体风格

--- a/src/pages/detail/index.less
+++ b/src/pages/detail/index.less
@@ -63,6 +63,26 @@
     justify-content: space-between;
     .wrapper {
       width: 258px;
+      .wrapper_item {
+        // box-shadow: #cecece 0 0 6px 0;
+        background-color: #fff;
+        margin-bottom: 20px;
+        padding: 3px;
+        .title {
+          font-size: 16px;
+          font-weight: 600;
+          margin-bottom: 20px;
+        }
+        .detail {
+          color: #333;
+          letter-spacing: 2px;
+          line-height: 27.2px;
+          text-indent: 2em;
+          p {
+            margin: 0;
+          }
+        }
+      }
     }
     .content {
       width: 900px;
