--- a/src/pages/doc/outlineConfig/style.less
+++ b/src/pages/doc/outlineConfig/style.less
@@ -67,6 +67,11 @@
         display: flex;
         align-items: center;
       }
+      .titleheadright {
+        padding: 10px;
+        display: flex;
+        align-items: center;
+      }
     }
     .text {
       margin-top: 5px;
