--- a/src/pages/query/components/NewHelp/index.less
+++ b/src/pages/query/components/NewHelp/index.less
@@ -9,6 +9,15 @@
     font-weight: bold;
     color: #333;
   }
+  .more{
+    color: rgb(153, 153, 153);
+    font-size: 12px;
+    float: right;
+    cursor: pointer;
+    &:hover{
+      color: #1890ff;
+    }
+  }
   .listItem {
     width: 100%;
     font-size: 12px;
