--- a/src/pages/personCenter/people/people.less
+++ b/src/pages/personCenter/people/people.less
@@ -13,6 +13,20 @@
           font-size: 16px;
           font-weight: bold;
       }
+      .item{
+        .delete{
+          color: red;
+          cursor: pointer;
+          display: none;
+          
+        }
+        &:hover{
+          .delete{
+            display: inline;
+          }
+        }
+      }
+     
   }
   p{
     margin-bottom: 0;
