修完成游客态，社区UI按钮的显隐

--- a/src/pages/reply/index.less
+++ b/src/pages/reply/index.less
@@ -49,13 +49,17 @@
           outline: none;
           border: none;
           padding: 4px 8px;
+          &:hover{
+            background: rgba(123, 132, 255, .8);
+            color: #fff;
+          }
           &:focus{
             border:none;
             outline: none;
           }
         }
         .action {
-          margin-left: 20px;
+          margin-right: 20px;
           cursor: pointer;
           &:hover{
             color:orange;
