--- a/src/pages/doc/index.less
+++ b/src/pages/doc/index.less
@@ -81,15 +81,15 @@
     .menu {
       // height: 400px;
       // padding-top: 40px;
-      :global(.ant-menu-item){
+      :global(.ant-menu-item) {
         margin-top: 0;
         // margin-bottom: 0;
       }
-      :global(.ant-menu-submenu-title){
+      :global(.ant-menu-submenu-title) {
         margin-top: 0;
         margin-bottom: 0;
       }
-      :global(.ant-menu-item:last-child){
+      :global(.ant-menu-item:last-child) {
         margin-bottom: 0;
       }
     }
@@ -178,9 +178,7 @@
 :global(.ant-popover-placement-bottom > .ant-popover-content > .ant-popover-arrow) {
   background-color: rgba(60, 60, 60, 0.8);
 }
-:global(.ant-popover-placement-bottom
-    > .ant-popover-content
-    > .ant-popover-arrow) {
+:global(.ant-popover-placement-bottom > .ant-popover-content > .ant-popover-arrow) {
   border-top-color: rgba(60, 60, 60, 0.8) !important;
   border-left-color: rgba(60, 60, 60, 0.8) !important;
 }
