修改首页样式

--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -254,7 +254,7 @@
           font-size: 16px;
           line-height: 36px;
           text-align: center;
-          background: linear-gradient(90deg, #89DCE4, #79C1EA);
+          background: linear-gradient(90deg, #89dce4, #79c1ea);
           &:hover {
             opacity: 0.8;
           }
@@ -307,9 +307,8 @@
     width: 1200px;
     margin: 40px auto;
     overflow: hidden;
-    .title{
+    .title {
       padding-bottom: 40px;
-      
     }
     .content {
       padding: 20px 40px;
@@ -318,6 +317,7 @@
         margin-right: 66px;
         img {
           width: 560px;
+          height: 100%;
         }
       }
       .right {
@@ -325,8 +325,7 @@
         width: 442px;
         height: 340px;
         margin-top: 40px;
-        padding-top: 40px;
-        padding-left: 40px;
+        padding: 40px 40px 0;
         background-color: #fff;
         box-shadow: 0px 0px 16px 0px rgba(105, 105, 105, 0.16);
         border-radius: 8px;
@@ -337,7 +336,7 @@
           font-size: 24px;
           font-weight: 400;
           color: #23242a;
-          &:hover{
+          &:hover {
             text-decoration: underline;
           }
         }
@@ -347,7 +346,7 @@
           font-weight: 400;
           color: rgba(196, 196, 196, 1);
           margin-bottom: 16px;
-          &:hover{
+          &:hover {
             text-decoration: underline;
           }
         }
