--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -317,7 +317,8 @@
         margin-right: 66px;
         img {
           width: 560px;
-          height: 100%;
+          height: 420px;
+          border-radius: 2%;
         }
       }
       .right {
