优化提纲目录样式，使之兼容ie小屏模式

--- a/src/pages/doc/outlineConfig/style.less
+++ b/src/pages/doc/outlineConfig/style.less
@@ -53,7 +53,7 @@
 .domain {
   background-color: #fff;
   .item {
-    padding: 10px;
+    padding-left: 10px;
     .head {
       display: flex;
       align-items: center;
