--- a/src/pages/doc/outlineConfig/style.less
+++ b/src/pages/doc/outlineConfig/style.less
@@ -15,7 +15,7 @@
 .list {
   display: flex;
   .right {
-    min-width: 350px;
+    min-width: 360px;
     margin-right: 10px;
   }
   .left {
@@ -53,7 +53,7 @@
 .domain {
   background-color: #fff;
   .item {
-    padding-left: 10px;
+    padding: 10px;
     .head {
       display: flex;
       align-items: center;
