--- a/src/pages/query/components/Technology/index.less
+++ b/src/pages/query/components/Technology/index.less
@@ -10,18 +10,29 @@
     padding-bottom: 10px;
     font-size: 15px;
     font-weight: bold;
-    .cara{
-        color: blue;
+    .cara {
+      color: #1890ff;
     }
   }
   .btn {
     padding: 10px 0;
-    
+    .button {
+      background-color: #1890ff;
+      color: #fff;
+      font-weight: bold;
+    }
+    .active {
+      background-color: #fff;
+      color: #1890ff;
+      font-weight: bold;
+    }
   }
   .list {
     .item {
       padding: 10px;
-      color: #666;
+      // color: #696969;
+      font-weight: bold;
+      font-size: 13px;
       letter-spacing: 2px;
       line-height: 24px;
       text-align: left;
