修改文档样式

--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -351,6 +351,11 @@
             text-decoration: underline;
           }
         }
+        .desc {
+          div {
+            padding: 6px 0;
+          }
+        }
         .questions {
           font-size: 16px;
           font-family: Microsoft YaHei;
