--- a/src/pages/query/components/Technology/index.less
+++ b/src/pages/query/components/Technology/index.less
@@ -30,7 +30,7 @@
   .list {
     .item {
       padding: 10px;
-      // color: #696969;
+      color: #777;
       font-weight: bold;
       font-size: 13px;
       letter-spacing: 2px;
