--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -72,7 +72,6 @@
       flex: 1;
       text-align: right;
       padding-right: 20px;
-
       .links {
         color: #fff;
         margin-left: 4px;
@@ -127,48 +126,48 @@
     padding-top: 84px;
   }
 
-  @media screen and (max-width: 1200px) {
-    .header {
-      .inputGroup {
-        .logo {
-          // display: none;
-          margin-left: 0;
-        }
-        .title {
-          display: none;
-        }
-        .tips {
-          display: none;
-        }
-        .inputWrap {
-          position: absolute;
-          left: 10%;
-          width: 50%;
-        }
-      }
-    }
-  }
+  // @media screen and (max-width: 1200px) {
+  //   .header {
+  //     .inputGroup {
+  //       .logo {
+  //         // display: none;
+  //         margin-left: 0;
+  //       }
+  //       .title {
+  //         display: none;
+  //       }
+  //       .tips {
+  //         display: none;
+  //       }
+  //       .inputWrap {
+  //         position: absolute;
+  //         left: 10%;
+  //         width: 50%;
+  //       }
+  //     }
+  //   }
+  // }
 
-  @media screen and(max-width: 400px) {
-    .header {
-      .inputGroup {
-        .logo {
-          display: none;
-        }
-        .title {
-          display: none;
-        }
-        .login {
-          display: none;
-        }
-        .inputWrap {
-          position: absolute;
-          // left: 10%;
-          width: 100%;
-        }
-      }
-    }
-  }
+  // @media screen and(max-width: 400px) {
+  //   .header {
+  //     .inputGroup {
+  //       .logo {
+  //         display: none;
+  //       }
+  //       .title {
+  //         display: none;
+  //       }
+  //       .login {
+  //         display: none;
+  //       }
+  //       .inputWrap {
+  //         position: absolute;
+  //         // left: 10%;
+  //         width: 100%;
+  //       }
+  //     }
+  //   }
+  // }
 
   .footer {
     position: absolute;
