1.丰富提纲目录标题title属性，使章节标题可以悬浮预览内部配置的问题； 2.为提纲目录每个章节添加通知是否未配置问题的醒目信号图标；

--- a/src/pages/doc/outlineConfig/style.less
+++ b/src/pages/doc/outlineConfig/style.less
@@ -80,6 +80,10 @@
         display: none;
         align-items: center;
       }
+      .headrightReverse {
+        display: block;
+        align-items: center;
+      }
 
       .titleheadright {
         margin-right: 10px;
@@ -89,6 +93,9 @@
     }
     .head:hover .headright {
       display: block; /*显示*/
+    }
+    .head:hover .headrightReverse {
+      display: none; 
     }
     .head:hover .titleheadright {
       display: block; /*显示*/
@@ -118,10 +125,18 @@
         display: none;
         align-items: center;
       }
+      .headrightReverse{
+        display: block; /*显示*/
+        align-items: center;
+      }
     }
     .text:hover .headright {
       display: block; /*显示*/
     }
+    .text:hover .headrightReverse {
+      display: none; 
+    }
+    
   }
 }
 
