--- a/src/pages/query/components/LawCase/index.less
+++ b/src/pages/query/components/LawCase/index.less
@@ -1,7 +1,4 @@
 .LawCase {
-  // box-shadow: #cecece 0 0 6px 0;
-  margin-bottom: 20px;
-  padding: 20px;
   background: #fff;
   .fullContent {
     color: #333;
@@ -14,5 +11,8 @@
     .item {
       padding: 4px 0;
     }
+  }
+  :global(.ant-list-pagination) {
+    margin-top: 0 !important;
   }
 }
