--- a/src/pages/query/components/LawTabs/index.less
+++ b/src/pages/query/components/LawTabs/index.less
@@ -1,10 +1,13 @@
+@import '../../../../global.less';
+
 .lawTabs {
   width: 100%;
-  padding: 20px 0;
+  background-color: #fff;
+  .cardStyle();
   :global(.ant-tabs-bar) {
     margin: 0;
   }
-  :global(.ant-tabs-nav-scroll){
+  :global(.ant-tabs-nav-scroll) {
     background-color: #fff;
   }
   .topicWrap {
