--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -306,7 +306,7 @@
   .experience {
     width: 1200px;
     margin: 40px auto;
-    overflow: hidden;
+    // overflow: hidden;
     .title {
       padding-bottom: 40px;
     }
@@ -326,7 +326,7 @@
         width: 442px;
         height: 340px;
         margin-top: 40px;
-        padding: 40px 40px 0;
+        padding: 20px 20px 0;
         background-color: #fff;
         box-shadow: 0px 0px 16px 0px rgba(105, 105, 105, 0.16);
         border-radius: 8px;
