首页轮播分页dot

--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -306,7 +306,7 @@
   .experience {
     width: 1200px;
     margin: 40px auto;
-    overflow: hidden;
+    // overflow: hidden;
     .title {
       padding-bottom: 40px;
     }
