章节问题配置页面添加当前问题匹配文档片段预览功能；

--- a/src/pages/doc/outlineConfig/style.less
+++ b/src/pages/doc/outlineConfig/style.less
@@ -78,6 +78,15 @@
   word-break: break-all;
 }
 
+.scrollContentInNodeQuestionModel{
+  margin-left: 75px;
+  height: 770px;
+  width: 630px;
+  overflow-y: auto;
+  border-style: outset;
+  word-break: break-all;
+}
+
 /* 谷歌等WebKit内核浏览器 */
 .scrollContent::-webkit-scrollbar {
   /*滚动条整体样式*/
