--- a/src/pages/query/components/SgList/index.less
+++ b/src/pages/query/components/SgList/index.less
@@ -1,5 +1,6 @@
 .SgList {
   padding: 20px 20px;
+  margin-bottom: 20px;
   background: #fff;
   box-shadow: #cecece 0 0 6px 0;
   .wrapper {
@@ -13,6 +14,9 @@
   }
   :global(.ant-list-item) {
     padding: 6px 0;
+    &:last-child {
+      border-bottom: none !important;
+    }
   }
   :global(.ant-list-footer) {
     overflow: hidden;
