--- a/src/pages/query/components/ToolsBook/index.less
+++ b/src/pages/query/components/ToolsBook/index.less
@@ -12,6 +12,9 @@
   .item {
     padding: 15px 0 10px 0;
     border-bottom: 1px dashed orange;
+    &:last-child {
+      border-bottom: 1px solid #eee;
+    }
   }
   .ReferenceBook_title {
     font-size: 16px;
