--- a/src/pages/query/components/Recommend/index.less
+++ b/src/pages/query/components/Recommend/index.less
@@ -17,6 +17,9 @@
       white-space: nowrap;
       color: #4480b8;
       padding: 0 10px 6px 0;
+      &:hover {
+        color: #53a2e3;
+      }
       &:last-child {
         margin-right: auto;
       }
