完成阅读理解的功能开发

--- a/src/pages/query/components/ReadComp/index.less
+++ b/src/pages/query/components/ReadComp/index.less
@@ -1,4 +1,7 @@
+@import '../../../../global.less';
+
 .ReadComp {
+  .cardStyle();
   .wrapper {
     box-shadow: #cecece 0 0 6px 0;
     // border: 10px solid transparent;
