法律相关ui更新

--- a/src/pages/query/components/LawCase/index.less
+++ b/src/pages/query/components/LawCase/index.less
@@ -1,5 +1,11 @@
 .LawCase {
   background: #fff;
+  :global(.ant-descriptions-title) {
+    margin-bottom: 10px;
+  }
+  :global(.ant-descriptions-item) {
+    padding-bottom: 8px !important;
+  }
   .fullContent {
     color: #333;
     letter-spacing: 2px;
