--- a/src/pages/doc/outlineConfigPreview/style.less
+++ b/src/pages/doc/outlineConfigPreview/style.less
@@ -252,3 +252,44 @@
     display: none;
   }
 }
+
+.dochelp {
+  // position: absolute;
+  // right: 30px;
+  // padding: 6px;
+  overflow: hidden;
+  display: block;
+  border-radius: 4px;
+  background: #ffffff;
+  color: #3474d9;
+  cursor: pointer;
+  // box-shadow: 0px 0px 8px 0px rgba(105, 105, 105, 0.14);
+  img {
+    width: 48px;
+  }
+  .buttonTxt {
+    display: none;
+    transition: display 1;
+    -webkit-transition: display 1s;
+  }
+  &:hover,
+  &:active,
+  &:focus {
+    // height: 56px;
+    .buttonTxt {
+      display: block;
+    }
+  }
+}
+
+.dochelpClose {
+  position: absolute;
+  right: -24px;
+  display: block;
+  border-radius: 4px;
+  background: #ffffff;
+  color: #3474d9;
+  img {
+    width: 48px;
+  }
+}
