句群长字符没有换行的问题

--- a/src/pages/query/components/SgList/index.less
+++ b/src/pages/query/components/SgList/index.less
@@ -3,6 +3,7 @@
   margin-bottom: 20px;
   background: #fff;
   box-shadow: #cecece 0 0 6px 0;
+  white-space: normal;
   .wrapper {
     // box-shadow: #cecece 0 0 6px 0;
     // margin-bottom: 20px;
@@ -28,6 +29,7 @@
     letter-spacing: 2px;
     line-height: 27.2px;
     text-indent: 2em;
+    word-break: break-word;
     p {
       margin: 0;
     }
