--- a/src/pages/query/components/SgPro/index.less
+++ b/src/pages/query/components/SgPro/index.less
@@ -19,6 +19,7 @@
     letter-spacing: 2px;
     line-height: 27.2px;
     text-indent: 2em;
+    word-break: break-all;
     p {
       margin: 0;
     }
