推出登录时刷新页面

--- a/src/pages/special/doc.less
+++ b/src/pages/special/doc.less
@@ -97,8 +97,12 @@
   .main {
     width: 1200px;
     margin: 20px auto 0;
+    .hot {
+      .docItem {
+        padding-bottom: 10px;
+      }
+    }
     .docItem {
-      padding: 10px;
       font-size: 15px;
       .text {
         color: #787878;
