修改输入框关闭按钮样式

--- a/src/components/SmartInput/inputRecord.less
+++ b/src/components/SmartInput/inputRecord.less
@@ -1,6 +1,6 @@
 .record-list {
   // border: 1px solid #d9d9d9;
-  box-shadow: 0 0 0 1px rgba(0,0,0,.1), 0 2px 4px 1px rgba(0,0,0,.18);
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 2px 4px 1px rgba(0, 0, 0, 0.18);
   border-bottom-left-radius: 6px;
   border-bottom-right-radius: 6px;
   // max-height: 300px;
@@ -17,11 +17,13 @@
       width: 96%;
     }
     :global(.anticon) {
+      padding-right: 4px;
       transition: all 0.2s ease;
       -moz-transition: all 0.2s ease; /* Firefox 4 */
       -webkit-transition: all 0.2s ease; /* Safari 和 Chrome */
       -o-transition: all 0.2s ease;
       &:hover {
+        padding-right: 4px;
         transform: rotate(180deg);
       }
     }
