--- a/src/pages/query/components/Sentence/index.less
+++ b/src/pages/query/components/Sentence/index.less
@@ -27,17 +27,16 @@
         position: fixed;
         bottom: 0;
         z-index: 2;
-        width: 743px;
-        // transform: translateX(-50%);
-        margin-left: -397px;
+        width: 705px;
+        margin-left: -492px;
         left: 50%;
-        border: 1px solid rgba(170,220,255,1);
+        border: 1px solid rgba(170, 220, 255, 1);
         height: 40px;
         padding: 10px;
         background: #fff;
         text-align: center;
         line-height: 20px;
-        color: #0097FF;
+        color: #0097ff;
       }
     }
     .Sentence_extra {
