--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <title>知网随问</title>
   <link rel="icon" type="image/x-icon" href="<%= context.publicPath %>favicon.ico" />
+ 
   <script type="text/javascript" charset="utf-8">
     window.addEventListener('message', function (e) {
       if (e.data.type === 'success') {
@@ -65,6 +66,7 @@
 
     function Ecp_LogoutOptr(data) { console.log('exit', data) }
   </script>
+   <script src="//g.alicdn.com/chatui/icons/0.2.7/index.js"></script>
 </head>
 
 <body>
