修复头像上传不成功的问题。 修复社区分页点击失效的问题。 优化文献组件展示ui。

--- a/src/pages/query/components/NewHelp/index.less
+++ b/src/pages/query/components/NewHelp/index.less
@@ -7,14 +7,13 @@
     border-bottom: 1px solid #e6e6e6;
     font-size: 16px;
     font-weight: bold;
-    color: #333;
   }
-  .more{
+  .more {
     color: rgb(153, 153, 153);
     font-size: 12px;
     float: right;
     cursor: pointer;
-    &:hover{
+    &:hover {
       color: #1890ff;
     }
   }
@@ -29,11 +28,10 @@
       text-overflow: ellipsis;
       white-space: nowrap;
       font-size: 14px;
-      color: #666;
-      font-weight: bold;
+      color: #1890ff;
       display: block;
       width: 70%;
-      &:hover{
+      &:hover {
         color: #1890ff;
       }
     }
