--- a/src/pages/special/doc.less
+++ b/src/pages/special/doc.less
@@ -102,6 +102,13 @@
         padding-bottom: 10px;
       }
     }
+    .doc {
+      min-height: 50vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
     .docItem {
       font-size: 15px;
       .text {
