临时性的修改

--- a/src/pages/query/components/ToolsBook/index.less
+++ b/src/pages/query/components/ToolsBook/index.less
@@ -13,7 +13,7 @@
     padding: 15px 0 10px 0;
     border-bottom: 1px dashed orange;
     &:last-child {
-      border-bottom: 1px solid #eee;
+      border-bottom: none;
     }
   }
   .ReferenceBook_title {
