--- a/src/pages/query/components/Concept/index.less
+++ b/src/pages/query/components/Concept/index.less
@@ -2,7 +2,7 @@
 
 .concept {
   .cardStyle();
-
+  padding-bottom: 20px;
   h2 {
     padding-bottom: 10px;
     color: lightslategray;
@@ -21,35 +21,36 @@
     .types {
       display: flex;
       align-items: center;
-      flex-wrap: wrap;
+      padding-left: 40px;
+      overflow: hidden;
     }
 
     .item {
-      padding: 4px 8px;
-      border: 1px solid lightblue;
-      margin-right: 10px;
+      // padding: 4px 8px;
+      // border: 1px solid lightblue;
+      margin-right: 20px;
       border-radius: 4px;
       margin-bottom: 5px;
 
       &:hover {
-        background-color: #1890ff;
-        color: #fff;
+        // background-color: #1890ff;
+        color: rgba(#1890ff, 0.8);
+        text-decoration: underline;
       }
     }
 
-    ol>li {
+    ol > li {
       padding: 10px 0;
       color: #333;
       letter-spacing: 2px;
       line-height: 24px;
       text-align: left;
-
     }
 
     .source {
       font-size: 13px;
       display: flex;
-      justify-content: flex-end;
+      // justify-content: flex-end;
 
       a {
         color: #999;
